# whiteboard_service

./: .gitignore  Makefile  README.md  pyproject.toml
tests/impl/: test_whiteboard_service.py
tests/whiteboard/: test_whiteboard.py
whiteboard_service/: __main__.py  config.py
whiteboard_service/impl/: whiteboard_service.py
whiteboard_service/stubs/: whiteboard.proto  whiteboard_pb2.py  whiteboard_pb2_grpc.py
whiteboard_service/whiteboard/: __init__.py
